# fwq

./: README.md  dev-cycle.py  dev-cycle.sh  pyproject.toml
src-tests/: test_fwq_api.py
src/fwq/: __init__.py  api.py  beanstalkd.py  broker.py  cli.py  constants.py  docker.py  etcd.py  flask.py  flask_auth.py  job.py  key.py  logs.py  version.txt  work_q.py  worker.py
src/fwq/aws/: __init__.py
src/fwq/jobs/: __init__.py
