[build-system]
requires = ["setuptools", "setuptools-scm", "gwerks"]
build-backend = "setuptools.build_meta"

[project]
name = "fwq"
authors = [{name = "Ron Glasmann", email = "ron@glasmann.net"}]
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "gwerks>=25.3.17",
    "pyyaml",
    "greenstalk",
]

[project.optional-dependencies]
aws = ["boto3"]

[project.scripts]
fwq = "fwq.cli:fwq"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "fwq.__version__"}

